--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 node_modules
 
 src/documents/json-files/track1/*
+src/documents/json-files/track1/!.gitignore
 src/documents/json-files/track2/*
+src/documents/json-files/track2/!.gitignore
 src/documents/json-files/track3/*
+src/documents/json-files/track3/!.gitignore
 
 src/documents/Track 1/
 src/documents/Track 2/
